--- a/for_logic/package.json
+++ b/for_logic/package.json
@@ -12,6 +12,8 @@
     "firebase": "^7.15.1",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
+    "vue-the-mask": "^0.11.1",
+    "vuelidate": "^0.7.5",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
